# estatapi-python

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
estatapi/: __init__.py  _appid.py  _endpoint.py  _enum.py  _functions.py  _output.py  _pandas.py  utils.py
examples/: example.ipynb  url.ipynb
tests/: test_appid.py  test_endpoint.py  test_enum.py  test_functions.py
